[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://VictoryScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle.gd" type="Script" id=3]
[ext_resource path="res://abigail.png" type="Texture" id=4]
[ext_resource path="res://BattleControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://Serena.png" type="Texture" id=6]
[ext_resource path="res://gold.png" type="Texture" id=7]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=8]

[node name="Battle" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="BattleControl" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="Panel" parent="CanvasLayer/BattleControl" index="0"]
margin_left = -1.0
margin_top = 650.0
margin_right = 1029.0
margin_bottom = 802.0

[node name="Button" type="Button" parent="."]
margin_left = 15.0
margin_top = 11.0
margin_right = 63.0
margin_bottom = 31.0
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 826, 237 )
mp = 10
magic = [ "Fire" ]

[node name="Abigail" parent="." instance=ExtResource( 1 )]
position = Vector2( 826, 97 )
speed = 6
mp = 10
strength = 200
magic = [  ]
main_sprite = ExtResource( 4 )

[node name="Serena" parent="." instance=ExtResource( 1 )]
position = Vector2( 826, 377 )
mp = 35
strength = 1
magic = [ "Fire", "Heal", "Cure" ]
main_sprite = ExtResource( 6 )

[node name="Gold" parent="." instance=ExtResource( 1 )]
position = Vector2( 826, 517 )
speed = 2
mp = 5
strength = 4
magic = [  ]
main_sprite = ExtResource( 7 )

[node name="Victory" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Camera2D" parent="." instance=ExtResource( 8 )]
visible = false
current = true

[node name="Position2D" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 100, 120 )

[node name="Position2D2" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 100, 320 )

[node name="Position2D4" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 240, 220 )

[node name="Position2D5" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 240, 420 )

[node name="Position2D3" type="Position2D" parent="." groups=["spawn_point"]]
position = Vector2( 100, 520 )

[connection signal="pressed" from="CanvasLayer/BattleControl/Panel/Controls/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="CanvasLayer/BattleControl/Panel/Controls/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="CanvasLayer/BattleControl/Panel/Controls/Magic" to="." method="_on_Magic_pressed"]
[connection signal="pressed" from="CanvasLayer/BattleControl/Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="CanvasLayer/BattleControl"]
